fix spelling error in gulp file and begin fixing api functionality

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       <h1>Find a doctor near you.</h1>
     </div>
     <input id="search" type="text">
-      <button class="btn-success" id="searchParam">Search for a doctor.</button>
-
+    <button class="btn-success" id="searchParam">Search for a doctor.</button>
+    <div class="container">
+      <div class="name"></div>
+      <div class="address"></div>
+      <div class="phone"></div>
+    </div>
 
   </body>
 </html>
