--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="build/css/vendor.css">
-  <link rel="stylesheet" href="build/css/app.css">
-  <script src="build/js/vendor.min.js"></script>
+  <!-- <link rel="stylesheet" href="build/css/vendor.css">
+  <link rel="stylesheet" href="build/css/app.css"> -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <!-- <script src="build/js/vendor.min.js"></script> -->
   <script type="text/javascript" src="build/js/app.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
   <title>DoctorFind</title>
