add proper promise to back end, now encountering a then is not defined error

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="name"></div>
       <div class="address"></div>
       <div class="phone"></div>
+      <div class="showErrors"></div>
     </div>
     <h3 id="results"></h3>
   </body>
