add working api routes for address and phone

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
       <div class="showErrors"></div>
     </div>
     <h3 id="results"></h3>
+    <ul id="print">
+      
+    </ul>
   </body>
 </html>
